Fix slope group header alignment.

--- a/client/scss/components/_constituency-group-slope.scss
+++ b/client/scss/components/_constituency-group-slope.scss
@@ -68,7 +68,8 @@
 
   .article-body__subhead {
     border: 0;
-    padding-left: 0;
+    padding-left: 2px;
+    padding-right: 0;
     font-weight: bold;
     font-size: 1.1em;
     color: $color-article-body;
